--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 
 # Created by https://www.gitignore.io/api/latex,linux,macos,windows
 
+# stop tracking sublime files
+*.sublime-workspace
+
+# don't track the output pdf for now
+proposal.pdf
+
 ### LaTeX ###
 ## Core latex/pdflatex auxiliary files:
 *.aux
